--- a/index.html
+++ b/index.html
@@ -9,22 +9,76 @@
 </head>
 <body>
     <header>
-        <img class="header_logo" src="img/logo.png">
-        <div class="header_controls"> 
+        <img class="header__logo" src="img/logo.png">
+        <div class="header__controls"> 
             <a href="#contacts">Контакты</a>
             <button>Заказать</button> 
         </div>
     </header>
     <section class="about">
-        <div class="about_info">
+        <div class="about__info">
             <h1>Солнечные панели Green Robotic</h1>
             <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
             <button>Узнать подробнее</button>
         </div>
-        <div class="about_images">
-            <img class="about_sun" src="img/sun.png">
-            <img class="about_panel" src="img/solar-panel.png">
+        <div class="about__images">
+            <img class="about__sun" src="img/sun.png">
+            <img class="about__panel" src="img/solar-panel.png">
         </div>
     </section>
+    <section class="form">
+        <div class="form__container">
+            <h1>Оставьте свои <br>контакты</h1>
+            <p>Поможем подобрать модель. <br>Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег.</p>
+            <form>
+                <div class="form__group">
+                    <label for="name">Ваше имя</label>
+                    <input type="text" placeholder="Введите имя" id="name">
+
+                    <br><label for="email">Электронная почта</label>
+                    <input type="text" placeholder="example@mail.ru" id="email">
+
+                    <br><label for="phone">Номер телефона</label>
+                    <input type="number" placeholder="+7 (000) 000-00-00" id="phone">
+
+                    <br><label for="budget">Примерный бюджет</label>
+                    <select id="budget">
+                        <option value="" disabled selected hidden>Выберите вариант</option>
+                        <option value="10-30">10 000₽ – 30 000₽</option>
+                        <option value="30-60">30 000₽ – 60 000₽</option>
+                        <option value="60-100">60 000₽ – 100 000₽</option>
+                        <option value="100+">свыше 100 000₽</option>
+                    </select>
+                </div>
+                <br><button class="form__submit" type="submit">Отправить заявку</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3>Позвонить нам:</h3>
+                <div class="footer__links">
+                    <a href="tel:79780000000">+7 (978) 000-00-00</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3>Решения для дома:</h3>
+                <div class="footer__links">
+                    <a href="#">Солнечные панели GreenRobotic</a>
+                    <a href="#">Системы солнечных панелей GreenStation</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3>Компания</h3>
+                <div class="footer__links">
+                    <a href="#">Контакты</a>
+                    <a href="#">Вакансии</a>
+                    <a href="#">СМИ</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">GreenCorp © 2024</div>
+    </footer>
 </body>
 </html>
